--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "author": "Carmen Popoviciu <carmen.popoviciu@gmail.com>",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "commit": "git-cz"
+  },
   "devDependencies": {
-    "@commitlint/cli": "11.0.0",
+    "@commitlint/cli": "11.0.0.",
+    "commitizen": "4.2.2",
+    "cz-conventional-changelog": "3.3.0",
     "husky": "4.3.0"
   }
 }
