--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "commit": "git-cz"
   },
   "devDependencies": {
-    "@commitlint/cli": "11.0.0.",
+    "@commitlint/cli": "11.0.0",
+    "@commitlint/prompt": "11.0.0",
     "commitizen": "4.2.2",
     "cz-conventional-changelog": "3.3.0",
     "husky": "4.3.0"
